// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Component creation Header component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <nav
          className="navbar navbar-light"
        >
          <a
            className="navbar-brand navbarItem"
            href="#"
          >
            netflixroulette
          </a>
        </nav>,
        false,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="navbar-brand navbarItem"
              href="#"
            >
              netflixroulette
            </a>,
            undefined,
          ],
          "className": "navbar navbar-light",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "netflixroulette",
              "className": "navbar-brand navbarItem",
              "href": "#",
            },
            "ref": null,
            "rendered": "netflixroulette",
            "type": "a",
          },
          undefined,
        ],
        "type": "nav",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <nav
            className="navbar navbar-light"
          >
            <a
              className="navbar-brand navbarItem"
              href="#"
            >
              netflixroulette
            </a>
          </nav>,
          false,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="navbar-brand navbarItem"
                href="#"
              >
                netflixroulette
              </a>,
              undefined,
            ],
            "className": "navbar navbar-light",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "netflixroulette",
                "className": "navbar-brand navbarItem",
                "href": "#",
              },
              "ref": null,
              "rendered": "netflixroulette",
              "type": "a",
            },
            undefined,
          ],
          "type": "nav",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Check Component creation Header component 2 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    showSearchButton={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <nav
          className="navbar navbar-light"
        >
          <a
            className="navbar-brand navbarItem"
            href="#"
          >
            netflixroulette
          </a>
          <BackButton />
        </nav>,
        false,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="navbar-brand navbarItem"
              href="#"
            >
              netflixroulette
            </a>,
            <BackButton />,
          ],
          "className": "navbar navbar-light",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "netflixroulette",
              "className": "navbar-brand navbarItem",
              "href": "#",
            },
            "ref": null,
            "rendered": "netflixroulette",
            "type": "a",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "nav",
      },
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <nav
            className="navbar navbar-light"
          >
            <a
              className="navbar-brand navbarItem"
              href="#"
            >
              netflixroulette
            </a>
            <BackButton />
          </nav>,
          false,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="navbar-brand navbarItem"
                href="#"
              >
                netflixroulette
              </a>,
              <BackButton />,
            ],
            "className": "navbar navbar-light",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "netflixroulette",
                "className": "navbar-brand navbarItem",
                "href": "#",
              },
              "ref": null,
              "rendered": "netflixroulette",
              "type": "a",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "nav",
        },
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
